# Project-Sentinel

./: .gitignore  Dockerfile  Makefile  README.md  bootstrap.sh
.cargo/: config.toml
.github/workflows/: build-dev-image.yml  ci.yml
cluster/: clickhouse-values.yaml  prometheus-grafana-values.yaml  strimzi-kafka-crd.yaml
docs/: DESIGN_DOC.md  THREAT_MODEL.md  arch.md
scripts/: env.sh  infra.sh
src/: Cargo.toml
src/agent/: Cargo.toml  build.rs
src/agent/src/: main.rs
src/bpf/: Cargo.toml  exec_trace.c  vmlinux.h
src/common/: Cargo.toml
src/common/src/: lib.rs
