[workspace]
members = [
    "agent",
    "common",
    "bpf",
]
resolver = "2"

# ADD THIS SECTION
[workspace.profile.dev]
opt-level = 3
debug = 2
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[workspace.profile.release]
lto = true
panic = "abort"
codegen-units = 1
rpath = false