[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Local shared library
sentinel-common = { path = "../common" }

# Core eBPF library
aya = { version = "0.12", features = ["async_tokio"] }
aya-log = "0.1"

# Asynchronous runtime and utilities
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"

[build-dependencies]
aya-builder = "0.1"