[package]
name = "sentinel-agent"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sentinel-common = { path = "../common" }
# CORRECTED: Use the latest published versions
aya = "0.12"
aya-log = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"

[build-dependencies]
# CORRECTED: Use the latest published version
aya-build = "0.1.2"