[package]
name = "exec-trace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
sentinel-common = { path = "../common" }

[[bin]]
name = "exec-trace"
path = "exec_trace.c"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]