[package]
name = "exec-trace"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya-ebpf = "0.2"
aya-log-ebpf = "0.2"
sentinel-common = { path = "../common" }

# This section tells cargo that our "binary" is the C file.
[[bin]]
name = "exec-trace"
path = "exec_trace.c"

# The incorrect [lib] section has been removed.